Clean up tmux conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,10 @@
+# enable mouse support
+
+# rename pane based on path
+set-option -g status-interval 5
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
+
 # set vi style keys
 setw -g mode-keys vi
 
@@ -14,6 +21,18 @@ unbind '"'
 unbind %
 bind | split-window -h
 bind - split-window -v
+bind % split-window -hf
+bind '"' split-window -vf
+
+# navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# move panes
+bind C-j swap-pane -D
+bind C-k swap-pane -U
 
 # copy mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection
